--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url("styles/topicos.css");
 @import url('styles/contato.css');
 @import url('styles/rodape.css');
+@import url('styles/carrossel.css');
 
 :root{
     --branco:#FFFFFF;
